# apps/api/app/modules/users/schemas.py
@@ -3,11 +3,11 @@ from typing import List
 from app.modules.users.models import User
 
 
-# class UserCreate(BaseModel):
-#     email: str = Field(..., min_length=3)
-
 class UserUpdate(BaseModel):
     email: str = Field(..., min_length=3)
+    first_name: str = Field(..., min_length=3)
+    last_name: str = Field(..., min_length=3)
+    phone: str = Field(..., min_length=3)
 
 class PaginatedUsers(BaseModel):
     items: List[User]
